[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/tourist.gd" type="Script" id=1]
[ext_resource path="res://entities/people_sprite.gd" type="Script" id=2]
[ext_resource path="res://assets/mockup.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 6.97548

[sub_resource type="CircleShape2D" id=2]
radius = 6.42645

[node name="solo" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
speed = 400
accel = 1200
concentration_min = 0.5
concentration_max = 2.0
angular_momentum = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.115105, -0.177769 )
rotation = 1.44862
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.135277 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.355639, 0.512205 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 52.1579, 288.271, 58.7258, 54.2936 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="set_color" from="." to="Sprite" method="_on_couple_set_color"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
